Sample/YHC/YHC.Portal/Views/Error/Error404.cshtml
@{
    Layout = "~/Views/Error/_Layout.cshtml";
}
<!--错误500-->
<div class="error">
	<h1>404</h1>
    <h2>对不起你要访问的页面没有找到！</h2>
    <p>英皇国际提醒您对不起你要访问的页面没有找到给您带来的不便深表歉意</p>
    <a href="#" title="7x24小时在线客服">7x24小时在线客服</a>
    <div class="error_footer">英皇国际网站属于菲律宾卡格杨(Cagayan)授权和监管 所有版权归英皇国际所有，违者必究。<br />
2004-2015 K9900.COM LIMITED.RCBC Plaza,6819Sen.Gil Puyat corner Ayala Avenue,Mak</div>
</div>